--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ package-mode = false
 python = ">=3.10,<3.13"
 icalendar = "^6.0.1"
 pyquery = "^2.0.1"
+rich = "^13.9.4"
+typer = "^0.13.1"
 
 
 [tool.poetry.group.dev.dependencies]
