--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ icalendar = "^6.0.1"
 pyquery = "^2.0.1"
 rich = "^13.9.4"
 typer = "^0.13.1"
+pydantic = "^2.10.0"
+pyyaml = "^6.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
